--- a/simple-web-project-template-master/index.html
+++ b/simple-web-project-template-master/index.html
@@ -14,26 +14,47 @@
 <br>
 — Arvo Pärt
 </p>
-
+<ol>
 <br>
+<li>
 1. Spiegel im Spiegel, 10:36
-   Vladimir Spivakov, violin
-   Sergej Bezrodny, piano
+   <ul>
+   <li>Vladimir Spivakov, violin</li>
+   <li>Sergej Bezrodny, piano</li>
+   </ul>
+</li>
 <br>
+<li>
 2. Für Alina, 10:47
-   Alexander Malter, piano
+   <ul>
+   <li>Alexander Malter, piano</li>
+   </ul>
+</li>
 <br>
+<li>
 3. Spiegel im Spiegel, 9:12
-   Dietmar Schwalke, violoncello
-   Alexander Malter, piano
+   <ul>
+   <li>Dietmar Schwalke, violoncello</li>
+   <li>Alexander Malter, piano</li>
+   </ul>
+</li>
 <br>
+<li>
 4. Für Alina, 10:53
-   Alexander Malter, piano
+   <ul>
+   <li>Alexander Malter, piano</li>
+   </ul>
+</li>
 <br>
+<li>
 5. Spiegel im Spiegel, 9:48
-   Vladimir Spivakov, violin
-   Sergej Bezrodny, piano
+   <ul>
+   <li>Vladimir Spivakov, violin</li>
+   <li>Sergej Bezrodny, piano</li>
+   </ul>
+</li>
 <br>
+</ol>
 
 <h2>Reviews</h2>
 <p>
@@ -50,11 +71,13 @@ First, they form the guiding principle of Pärt’s musical ideology, which embr
 <br>
 Second, the tracks are symmetrically ordered:
 <br>
-1. Spiegel im Spiegel (violin and piano)
-2. Für Alina (solo piano)
-3. Spiegel im Spiegel (cello and piano)
-4. Für Alina (solo piano)
-5. Spiegel im Spiegel (violin and piano)
+<ol>
+<li>1. Spiegel im Spiegel (violin and piano)</li>
+<li>2. Für Alina (solo piano)</li>
+<li>3. Spiegel im Spiegel (cello and piano)</li>
+<li>4. Für Alina (solo piano)</li>
+<li>5. Spiegel im Spiegel (violin and piano)</li>
+</ol>
 <br>
 This rigidity ensures that any complex posturing is shunned in favor of direct communion. Despite their sparse instrumentation, the three versions of Spiegel im Spiegel comprise Pärt’s most spacious statement ever committed to disc. Each is like an edge of his metaphorical prism, bending light into hues that one can almost taste in the listening. One might easily criticize this approach as a halfhearted attempt to fill a disc were it not for the profound indeterminacy throughout. It is in this sense that the cello in the central incarnation sighs like an exhausted organ sending its final pulses straight into the heart of a period passed in quiet humility.
 <br>
