add and apply font

--- a/simple-web-project-template-master/index.html
+++ b/simple-web-project-template-master/index.html
@@ -3,6 +3,7 @@
 <head>
    <meta charset="utf-8">
    <title>HTML5 Template — PLEASE UPDATE THIS</title>
+   <link href='http://fonts.googleapis.com/css?family=Lato:400,300,300italic,900,700,400italic&amp;subset=latin,latin-ext' rel='stylesheet' type='text/css'>
    <link rel="stylesheet" href="css/base.css">
    <link rel="stylesheet" href="css/main.css">
 </head>
