--- a/simple-web-project-template-master/index.html
+++ b/simple-web-project-template-master/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
    <header>
-      <h1>Alina by Arvo Pärt</h1>
+      <h1><span>alina</span> by arvo pärt</h1>
    </header>
    <main>
       <div class="album">
