--- a/simple-web-project-template-master/index.html
+++ b/simple-web-project-template-master/index.html
@@ -13,9 +13,10 @@
    </header>
    <main>
       <div class="album">
-         <p>
+         <div>
             “I could compare my music to white light which contains all colours. Only a prism can divide the colours and make them appear; this prism could be the spirit of the listener.”
-            <br>
+         </div>
+         <p>
             — Arvo Pärt
          </p>
          <ol>
