--- a/simple-web-project-template-master/index.html
+++ b/simple-web-project-template-master/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
    <header>
-      <h1><span>alina</span> by arvo pärt</h1>
+      <h1><span>alina</span><br>by arvo pärt</h1>
    </header>
    <main>
       <div class="album">
@@ -17,7 +17,8 @@
             “I could compare my music to white light which contains all colours. Only a prism can divide the colours and make them appear; this prism could be the spirit of the listener.”
          </div>
          <p>
-            — Arvo Pärt
+            — <b>Arvo Pärt</b>
+            <br><br><br><br>
          </p>
          <ol>
             <br>
