format album list elements

--- a/simple-web-project-template-master/index.html
+++ b/simple-web-project-template-master/index.html
@@ -22,44 +22,39 @@
          </p>
          <ol>
             <br>
-            <li>
-               1. Spiegel im Spiegel, 10:36
+            <li><i>Spiegel im Spiegel</i>, 10:36
                <ul>
                   <li>Vladimir Spivakov, violin</li>
                   <li>Sergej Bezrodny, piano</li>
                </ul>
             </li>
             <br>
-            <li>
-               2. Für Alina, 10:47
+            <li><i>Für Alina</i>, 10:47
                <ul>
                   <li>Alexander Malter, piano</li>
                </ul>
             </li>
             <br>
-            <li>
-               3. Spiegel im Spiegel, 9:12
+            <li><i>Spiegel im Spiegel</i>, 9:12
                <ul>
                   <li>Dietmar Schwalke, violoncello</li>
                   <li>Alexander Malter, piano</li>
                </ul>
             </li>
             <br>
-            <li>
-               4. Für Alina, 10:53
+            <li><i>Für Alina</i>, 10:53
                <ul>
                   <li>Alexander Malter, piano</li>
                </ul>
             </li>
             <br>
-            <li>
-               5. Spiegel im Spiegel, 9:48
+            <li><i>Spiegel im Spiegel</i>, 9:48
                <ul>
                   <li>Vladimir Spivakov, violin</li>
                   <li>Sergej Bezrodny, piano</li>
                </ul>
             </li>
-            <br>
+            <br><br><br>
          </ol>
       </div>
       <div class = "details">
